refactor: MoveInfo가 Position을 반환하도록 변경
 ChessService가 필드로 board와 team을 갖도록 변경